Actualizar tablero.html

--- a/tablero.html
+++ b/tablero.html
@@ -16,8 +16,8 @@
             <div class="fila-superior">
                 <div class="espacio-carta azul">Deck</div>
                 <div class="espacio-carta rojo">Carta Especial</div>
-                <div class="espacio-carta azul">Side</div>
-                <div class="espacio-carta azul">Trash</div>
+                <div class="espacio-carta azul">Carta</div>
+                <div class="espacio-carta azul">Carta</div>
             </div>
 
             <!-- Fila Central -->
